--- a/src/components/App/Timeline.scss
+++ b/src/components/App/Timeline.scss
@@ -33,43 +33,120 @@ $l-break: 1200px;
 
 .timeline-arrow {
 	width: 30px;
-	transform: translate(-150%,40%);
-	position: absolute;
+	position: relative;
+	left: 0;
+	width: 40px;
+	max-height: 80px;
+	display: inline-flex;
+	align-self: end;
 
+	@include small {
+		width: 45px;
+		min-width: 45px;
+		max-height: 90px;
+		} 
+	@include medium {
+			width: 50px;
+			max-height: 100px;
+			min-width: 50px;
+		}
+	@include large {
+			width: 60px;
+			max-height: 120px;
+			min-width: 60px;
+		}	
+	}
+
+
+.info-tooltip {
+	
+
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+
+
+	@include small {
+
+	} 
+	@include medium {
+
+
+	}
+	@include large {
+	}
+}
+
+.info-tooltip-up {
+
+		align-self: flex-end;
+		text-align: start;
+		margin-bottom:10px ;
+		p {
+			margin: 0;
+		}
+		@include small {
+		} 
+		@include medium {
+	
+		}
+		@include large {
+		}
+		
 }
 
 .timeline-tooltip {
 
 	z-index: 20;
 	width: auto;
-	height: 150px;
+	min-height: 150px;
 	min-width: 180px;
-	max-width: 300px;
+	display: flex;
+	justify-content: flex-start;
 	color: #1d1d1b;
 	white-space: normal;
 	position: absolute;
+	left:0;
+	flex-direction: row;
 
-
-	
 	@include small {
-		height:150px;
+		min-height:150px;
 
 	}
 	@include medium() {
-		height:150px;
+		min-height:150px;
 
 	}
 	@include large {
-		height: 150px;
+		min-height: 150px;
 
 	}
 
+
+
+	.info-tooltip {
+
+		display: flex;
+		text-align: left;
+		flex-direction: column;
+		justify-content: flex-start;
+
+	@include small {
+	} 
+	@include medium {
+
+	}
+	@include large {
+	}
+}
+
+// reverse de arriba 
 	&.reverse {
-		text-align: right;
-		transform: translateX(-100%);
-		.timeline-arrow {
-			transform: rotate(0deg) translate(150%,40%);	
-		}
+		text-align: start;
+		height: 100%;
+		justify-content: end;
+		display: flex;
+	
 	}
 
 	h4 {
@@ -93,9 +170,11 @@ $l-break: 1200px;
 	
 	height:150px;
 	margin: 0;
+
 	padding: 0;
 	display: flex;
 	position: relative;
+
 
 	@include small {
 		height:150px;
@@ -109,49 +188,70 @@ $l-break: 1200px;
 		height: 150px;
 
 	}
-
+// tooltip de abajo 
 	&.down-wrapper {
+
 
 		height:200px;
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
 		flex-direction: column;
-	
 		padding: 0;
 		padding-top: 4px;
 
-
+		
+	
+	
 		@include small {
 			height:200px;
-	
+
+			
 		}
+
 		@include medium() {
 			height:200px;
-	
 		}
 		@include large {
 			height: 250px;
-	
+
 		}
 
 		.timeline-arrow {
 		
-		  transform: rotate(180deg) translate(150%,0);	
+		    transform: rotate(180deg);
+			align-self: flex-start;	
 
 		}
 
 		.timeline-tooltip {
 
-			left: 100%;
 			top:100px;
+
+			z-index: 10;
+
+
+			// tooltip de abajo reverso 
 			&.reverse {
 			
-				left: 0;
-				transform: translateX(-100%);
+				
+	.info-tooltip {
+
+	left:0;
+	text-align: start;
+
+	@include small {
+	} 
+	@include medium {
+
+	}
+	@include large {
+	}
+	}
+			
 				.timeline-arrow {
 	
-					transform: rotate(180deg) translate(-200%,-0);	
+					transform: rotate(180deg) translate(0,0);	
 				  }
 			
 			}
@@ -175,7 +275,7 @@ $l-break: 1200px;
 .timeline-item {
 
 	display: inline-flex;
-    align-items: center;
+    align-items: start;
     flex-direction: column;
     justify-content: flex-start;
 
@@ -267,9 +367,23 @@ $l-break: 1200px;
     p {
 
         margin: 10px auto;
-        font-size: 1rem;
+        font-size: 0.7rem;
 		text-align: center;
 		max-width: 92%;
+
+		@include small {
+			font-size: 0.8rem;
+
+		}
+		@include medium() {
+			font-size: 1rem;
+
+		}	
+			@include large {
+			font-size: 1rem;
+
+		}
+
     }
 
 
